@startuml

title __LABACT3's Class Diagram__\n

    namespace tree.visualization.labact3 {
      class tree.visualization.labact3.MainApplication {
          {static} + main()
          + start()
      }
    }


    namespace tree.visualization.labact3 {
      class tree.visualization.labact3.MainController {
          - MAX_LEVEL : int
          - bst : MyBSTree<Character>
          - input : TextField
          - inputList : LinkedList<Character>
          - level : int
          - scene : AnchorPane
          + delete()
          + initialize()
          + insert()
          + validateInput()
          - deleteLogic()
          - generateNode()
          - insertLogic()
          - minValue()
      }
    }


    namespace tree.visualization.labact3 {
      class tree.visualization.labact3.MyBSTree {
          + MyBSTree()
          + buildTree()
          + contains()
          + inorderTraversal()
          + insert()
          + isEmpty()
          + postorderTraversal()
          + preorderTraversal()
          + rebuildTree()
          + remove()
          + search()
          + toString()
          - compareVal()
          - minValue()
          - toStringHelper()
      }
    }


    namespace tree.visualization.labact3 {
      class tree.visualization.labact3.MyBSTree.TreeNode {
          + TreeNode()
      }
    }


  tree.visualization.labact3.MainApplication -up-|> javafx.application.Application
  tree.visualization.labact3.MainController .up.|> javafx.fxml.Initializable
  tree.visualization.labact3.MyBSTree o-- tree.visualization.labact3.MyBSTree.TreeNode : root
  tree.visualization.labact3.MyBSTree +-down- tree.visualization.labact3.MyBSTree.TreeNode
  tree.visualization.labact3.MyBSTree.TreeNode o-- E : data
  tree.visualization.labact3.MyBSTree.TreeNode o-- tree.visualization.labact3.MyBSTree.TreeNode : left
  tree.visualization.labact3.MyBSTree.TreeNode o-- tree.visualization.labact3.MyBSTree.TreeNode : right


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
